<resources>
    <string name="app_name">Money Manager</string>
    <!-- Strings related to login and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginText">Đăng nhập</string>
    <string name="signupText">Đăng ký</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="passwordConfirm">Nhập lại mật khẩu</string>
    <string name="fullName">Họ và tên</string>
    <string name="signupSuggestion">Chưa có tài khoản? </string>
    <string name="loginSuggestion">Đã có tài khoản? </string>
    <string name="appName">Money Manager</string>
    <string name="forgetPassword">Quên mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="enterCode">Nhập mã xác nhận</string>
    <string name="sendOTP">Gửi OTP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="time">Thời gian</string>
    <string name="edit">Sửa</string>

    <!--> Navigation bar <-->
    <string name="home">Trang chính</string>
    <string name="statistics">Thống kê</string>
    <string name="add">Thêm</string>
    <string name="utilities">Tiện ích</string>
    <string name="settings">Cài đặt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_chosse">LoginChosseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--Home-->
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="monday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="saturday">Thứ 7</string>
    <string name="sunday">Chủ nhật</string>
    <string name="todaySample">06/11/2020 - 06/01/2021 </string>
    <string name="downArrow">▾</string>
    <string name="limit">Hạn mức chi tiêu</string>
    <string name="todaySpending">Tổng chi</string>
    <string name="todayIncome">Tổng thu</string>
    <string name="moneyPH">10,000,000</string>
    <string name="moneyPHSmall">25,000</string>
    <string name="currencyPH">VNĐ</string>
    <string name="details">Chi tiết</string>
    <string name="moneySourceNamePH">Ví chung</string>
    <string name="datePH">02/07/2020</string>
    <string name="timePH">07:31</string>
    <string name="moneyPlusPH">+250,000</string>
    <string name="moneySubtractPH">- 25,000</string>
    <string name="noMoneySource">Vui lòng thêm nguồn tiền trước!</string>
    <string name="noTransaction">Chưa có ghi chép!</string>
    <string name="searchTransaction">Tìm kiếm giao dịch</string>
    <string name="chooseTimeView">Chọn khoảng thời gian</string>
    <string name="startTime">Thời điểm bắt đầu</string>
    <string name="endTime">Thời điểm kết thúc</string>

    <!--Add transaction-->
    <string name="addTransaction">Thêm ghi chép</string>
    <string name="enterMoneyAmount">Nhập số tiền</string>
    <string name="chooseMoneySource">Chọn nguồn tiền</string>
    <string name="chooseDate">Chọn ngày</string>
    <string name="chooseCategory">Chọn danh mục</string>
    <string name="chooseTime">Chọn giờ</string>
    <string name="enterDescription">Nhập mô tả</string>
    <string name="choose">Chọn</string>
    <string name="description">Mô tả</string>

    <!--Settings-->
    <string name="data">Dữ liệu</string>
    <string name="account">Tài khoản</string>
    <string name="backup">Sao lưu</string>
    <string name="restore">Khôi phục</string>
    <string name="changeInfo">Sửa thông tin</string>
    <string name="namePH">Nguyễn Văn X</string>
    <string name="logout">Đăng xuất</string>
    <string name="logoutConfirm">Bạn có chắc muốn đăng xuất?</string>
    <string name="cancel">Hủy</string>
    <string name="formatDate">Dạng ngày tháng</string>
    <string name="reminder">Nhắc nhở</string>
    <string name="color">Màu chủ đề</string>
    <string name="help">Câu hỏi thường gặp</string>


    <!--Edit user info-->
    <string name="accountInfo">Thông tin tài khoản</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="newPasswordConfirm">Nhập lại mật khẩu mới</string>
    <string name="save">Lưu</string>
    <string name="emailPH">Nguyenvanx@gmail.com</string>
    <string name="passwordMismatch">Mật khẩu không khớp!</string>
    <string name="infoMissing">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="oldPasswordTitle">Đổi mật khẩu</string>
    <string name="oldPasswordConfirm">Vui lòng nhập lại mật khẩu cũ</string>
    <string name="oldPassword">Mật khẩu cũ</string>
    <string name="changeAvatar">Đổi ảnh</string>
    <string name="ddmmyyyy">dd/mm/yyyy</string>
    <string name="mmddyyyy">mm/dd/yyyy</string>
    <string name="yyyyddmm">yyyy/dd/mm</string>
    <string name="yyyymmdd">yyyy/mm/dd</string>
    <string name="chooseReminderTime">Chọn thời gian nhắc nhở</string>
    <string name="chooseColor">Chọn màu chủ đề</string>

    <!--Categories-->
    <string name="food">Ăn uống</string>
    <string name="bill">Sinh hoạt</string>
    <string name="travel">Đi lại</string>
    <string name="health">Sức khỏe</string>
    <string name="more">Khác</string>
    <string name="bonus">T.Thưởng</string>
    <string name="profit">Tiền Lãi</string>
    <string name="salary">T.Lương</string>
    <string name="gift">Được tặng</string>
    <string name="spend">Tiền Chi</string>
    <string name="income">Tiền Thu</string>
    <string name="party">Đám tiệc</string>

    <!--Utilities-->
    <string name="mainMoneySource">Ng.Tiền chính</string>
    <string name="manageMoneySources">Q.Lý nguồn tiền</string>
    <string name="notification">Thông báo</string>
    <string name="currencyConverter">Ngoại tệ</string>
    <string name="calculateTax">Thuế TN</string>
    <string name="calculateProfit">Lãi suất</string>
    <string name="manageMoneySourceFull">Quản lý nguồn tiền</string>
    <string name="convertCurrency">Chuyển đổi ngoại tệ</string>
    <string name="unit">Đơn vị</string>
    <string name="convertTo">đổi sang</string>
    <string name="enterMoney">Nhập số tiền</string>
    <string name="convert">Đổi</string>
    <string name="convertResult">Số tiền sau khi đổi là</string>
    <string name="calculateTaxFull">Tính thuế thu nhập cá nhân</string>
    <string name="totalSalary">Tổng tiền lương</string>
    <string name="salaryForInsurance">Lương đóng bảo hiểm</string>
    <string name="dependentPersons">Số người phụ thuộc</string>
    <string name="calculate">Tính</string>
    <string name="calculateTaxResult">Tổng thuế TNCN của bạn là</string>
    <string name="calculateProfitFull">Tính lãi suất ngân hàng</string>
    <string name="timePeriod">Kỳ hạn</string>
    <string name="profitRatio">Lãi suất</string>
    <string name="calculateProfitResult">Tiền lãi của bạn là</string>


    <!--Transaction Details-->
    <string name="dateTime">Ngày giờ</string>
    <string name="deleteTransaction">Xóa</string>

    <!--Money Source-->
    <string name="addMoneySource">Thêm nguồn tiền</string>
    <string name="moneySourceName">Tên nguồn tiền</string>
    <string name="moneySourceUnit">Đơn vị</string>
    <string name="moneySourceAmount">Số tiền</string>
    <string name="moneySource">Nguồn tiền</string>

    <!--Currency-->
    <string name="chooseUnit">Chọn đơn vị</string>
    <string name="searchUnit">Tìm kiếm đơn vị</string>

    <!--Statistics-->
    <string name="thisMonth">Tháng này</string>
    <string name="monthPH">Tháng 11, 2020</string>
    <string name="overview">Tổng quan</string>
    <string name="chart">Biểu đồ</string>
    <string name="noDataThisMonth">Không có dữ liệu cho tháng này!</string>
    <string name="unitOfCurrency">Đơn vị tiền tệ</string>
    <string name="specialTransaction">G.dịch định kỳ</string>
    <string name="change">Thay đổi</string>
    <string name="manage">Quản lý</string>
    <string name="exchangeMoney">Ch.tiền</string>
    <string name="exchangeMoneyTitle">Chuyển tiền</string>
    <string name="source">Nguồn tiền gốc</string>
    <string name="destination">Nguồn tiền đích</string>
    <string name="exchange">Chuyển</string>
    <string name="moneyToExchange">Số tiền cần chuyển</string>

    <string name="facebook_app_id">886246855208820</string>
    <string name="fb_login_protocol_scheme">fb886246855208820</string>

    <!--Manage periodic transaction-->
    <string name="periodicTransaction">Giao dịch định kỳ</string>
    <string name="addPeriodicTransaction">Thêm giao dịch định kỳ</string>
    <string name="periodicTransactionName">Tên giao dịch</string>
    <string name="chooseTimeGeneral">Chọn thời gian</string>
    <string name="title_activity_periodic_transaction_details">PeriodicTransactionDetails</string>
    <string name="spendingStatistics">Thống kê chi tiêu</string>
    <string name="incomeStatistics">Thống kê thu nhập</string>
    <string name="totalIncome">Tổng thu nhập</string>
    <string name="totalSpending">Tổng chi tiêu</string>

    <!--FAQ-->
    <string name="faq">Câu hỏi thường gặp</string>
    <string name="q1">Làm thế nào để thêm một giao dịch mới?</string>
    <string name="a1">Bạn có thể thêm giao dịch mới bằng cách chọn biểu tượng <b>dấu cộng (+)</b> phía dưới cùng, nhập các thông tin của giao dịch và nhấn nút <b>Lưu</b>.</string>
    <string name="q2">Làm thế nào để thêm nguồn tiền mới?</string>
    <string name="a2">Để thêm nguồn tiền mới, bạn hãy chọn trang <b>Tiện ích</b>, chọn nút <b>Quản lý</b> dưới mục nguồn tiền. Trong hộp thoại hiện ra, bạn hãy chọn nút <b>Thêm</b>, sau đó nhập thông tin và nhấn nút <b>Lưu</b></string>
    <string name="q3">Giao dịch định kỳ là gì?</string>
    <string name="a3">Giao dịch định kỳ là một loại giao dịch đặc biệt, nó sẽ được tự động thêm một cách lặp đi lặp lại sau mỗi khoảng thời gian mà bạn chỉ định. </string>
    <string name="q4">Làm sao để thêm một giao dịch định kỳ?</string>
    <string name="a4">Để thêm một giao dịch định kỳ, bạn có thể vào trang <b>Tiện ích</b>, chọn nút <b>Quản lý</b> dưới mục <b>Giao dịch định kỳ</b>, trong màn hình Quản lý, chọn nút <b>dấu cộng (+)</b>, nhập thông tin và nhấn nút <b>Lưu</b></string>
    <string name="q5">Có thể tùy biến giao diện ứng dụng không?</string>
    <string name="a5">Được! Hiện tại bạn có thể thay đổi <b>Định dạng hiển thị ngày tháng</b> và <b>Màu sắc chủ đề</b> của ứng dụng. Hãy thử vào mục cài đặt và chọn các mục cài đặt tương ứng nhé!.</string>

</resources>
