<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQActivity"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/backButton_faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        android:tint="@color/white"
        android:background="@android:color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_below="@id/backButton_faq"
        android:id="@+id/accountInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"
        android:text="@string/faq"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>


    <ScrollView
        android:scrollbars="none"
        android:id="@+id/editInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/accountInfoTitle"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="10dp"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>


        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</RelativeLayout>