<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/transaction_item"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/title_calculateProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateProfitFull"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>

    <EditText
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/moneyAmount_calculateProfit"
        android:hint="@string/enterMoney"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/innershape"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_below="@id/title_calculateProfit"
        android:inputType="number"/>

    <EditText
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/timePeriod_calculateProfit"
        android:hint="@string/timePeriod"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/innershape"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_below="@id/moneyAmount_calculateProfit"
        android:inputType="number"/>

    <EditText
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/profitRatio_calculateProfit"
        android:hint="@string/profitRatio"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/innershape"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_below="@id/timePeriod_calculateProfit"
        android:inputType="number"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@id/profitRatio_calculateProfit"
        android:layout_centerHorizontal="true"
        android:id="@+id/calculate_calculateProfit"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:textAllCaps="false"
        android:background="@drawable/authbtns"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:text="@string/calculate"/>


    <TextView
        android:visibility="gone"
        android:id="@+id/resultTitle_calculateProfit"
        android:layout_marginTop="20dp"
        android:layout_below="@id/calculate_calculateProfit"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateProfitResult"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="15sp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/result_calculateProfit"
        android:layout_below="@id/resultTitle_calculateProfit"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneyPHSmall"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textSize="22sp"/>


</RelativeLayout>