<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/loginbg" />

    <ImageView
        android:id="@+id/piggyBankIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_piggy_bank"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/loginText"/>

    <TextView
        android:id="@+id/loginText"
        android:layout_above="@+id/email_login"
        android:layout_marginTop="55dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/loginText"/>


    <EditText
        android:id="@+id/email_login"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="45dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/authforms"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:selectAllOnFocus="true"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="300dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/authforms"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/forgetPassword"
        android:layout_below="@id/password_login"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorAccentText"
        android:fontFamily="sans-serif-light"/>

    <LinearLayout
        android:id="@+id/buttonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_login"
        android:orientation="horizontal"
        android:layout_marginTop="75dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="true"
            android:layout_marginEnd="15dp"
            android:text="@string/loginText"
            android:background="@drawable/authbtns"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/signupPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="true"
            android:text="@string/signupText"
            android:background="@drawable/emptybtns"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/ggLoginButton"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/google_box"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageButton
            android:id="@+id/fbLoginButton"
            android:layout_marginRight="15dp"
            android:background="@drawable/facebook_box"
            android:layout_width="60dp"
            android:layout_height="60dp" />


    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
</RelativeLayout>